[gd_scene load_steps=10 format=2]

[ext_resource path="res://ActionSpace/MovableActionSpace.gd" type="Script" id=1]
[ext_resource path="res://ActionSpace/ActionSpace.tscn" type="PackedScene" id=2]
[ext_resource path="res://Acessorios/art/open_hand_icon.png" type="Texture" id=3]
[ext_resource path="res://Acessorios/art/closed_hand_icon.png" type="Texture" id=4]
[ext_resource path="res://Acessorios/art/arrow.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "open_close_hand",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.50925, 11.8146 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.1503, 5.34275 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15.0111, 5.34275 )

[node name="MovableActionSpace" type="Node2D"]
script = ExtResource( 1 )

[node name="ActionSpace" parent="." instance=ExtResource( 2 )]
margin_left = -185.0
margin_top = 14.0
margin_right = 15.0
margin_bottom = 114.0

[node name="ClickDragArea" type="Area2D" parent="."]

[node name="OpenCloseHand" type="AnimatedSprite" parent="ClickDragArea"]
scale = Vector2( 0.025, 0.028 )
frames = SubResource( 1 )
animation = "open_close_hand"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickDragArea"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="InputArea" type="Area2D" parent="."]

[node name="InputCollisionShape" type="CollisionShape2D" parent="InputArea"]
position = Vector2( -200, 64 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="InputArea"]
position = Vector2( -199.553, 64 )
scale = Vector2( 0.11584, 0.0448923 )
texture = ExtResource( 5 )

[node name="OutputArea" type="Area2D" parent="."]

[node name="OutputCollisionShape" type="CollisionShape2D" parent="OutputArea"]
position = Vector2( 30, 64 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="OutputArea"]
position = Vector2( 30, 64 )
scale = Vector2( 0.116, 0.045 )
texture = ExtResource( 5 )
flip_h = true
[connection signal="mouse_entered" from="ClickDragArea" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="ClickDragArea" to="." method="_on_Area2D_mouse_exited"]
[connection signal="area_shape_entered" from="InputArea" to="." method="_on_InputArea_area_shape_entered"]
[connection signal="area_shape_entered" from="OutputArea" to="." method="_on_OutputArea_area_shape_entered"]
